--- a/encyclopedia/templates/encyclopedia/layout.html
+++ b/encyclopedia/templates/encyclopedia/layout.html
@@ -24,6 +24,9 @@
                 <div>
                     Random Page
                 </div>
+                <div>
+                    <a href="/hello"> Hello </a>
+                </div>
                 {% block nav %}
                 {% endblock %}
             </div>
